lab3/Carsto/Lab/resource_ws/log/build_2026-02-25_09-24-35/python_turtle/stderr.log
  File "/home/yahboom/Desktop/S26_RobotProgramming_Crystal/lab3/Carsto/Lab/resource_ws/install/python_turtle/lib/python3.10/site-packages/python_turtle/turtlebot_server.py", line 24
    self.turtle_color_srv = self.create_service(<service type>, 'set-Color',  self.set_color_callback)
                                                ^
SyntaxError: invalid syntax

